[gd_scene load_steps=4 format=2]

[ext_resource path="res://rooms/test/room_run_test.gd" type="Script" id=1]
[ext_resource path="res://rooms/test/level_map.gd" type="Script" id=2]
[ext_resource path="res://objects/move_tileset.tres" type="TileSet" id=3]

[node name="Run Test" type="Node2D"]
script = ExtResource( 1 )

[node name="Run Animation" type="CheckButton" parent="."]
margin_left = -1.0
margin_top = 98.0
margin_right = 130.0
margin_bottom = 138.0
text = "Running"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 2 )

[node name="MoveMaps" type="Node2D" parent="."]
[connection signal="toggled" from="Run Animation" to="." method="_on_Run_Animation_toggled"]
